<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:src="@color/colorAccent" />

            <TextView
                style="@style/TextContent.Small.White"
                android:id="@+id/tv_detail_nama"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="16dp"
                android:gravity="center_vertical"
                tools:text="@string/motor_name"/>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_detail_harga"
            style="@style/TextContent.Black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="22sp"
            tools:text="@string/motor_price" />

        <TextView
            android:id="@+id/tv_detail_deskripsi"
            style="@style/TextContent"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/detail"
            android:textColor="@android:color/black" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/spek" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/mesin" />

                <TextView
                    android:id="@+id/tv_detail_mesin"
                    style="@style/TextSpec.Value"
                    tools:text="@string/content_mesin" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/cc" />

                <TextView
                    android:id="@+id/tv_detail_cc"
                    style="@style/TextSpec.Value"
                    tools:text="@string/content_cc" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/sistem" />

                <TextView
                    android:id="@+id/tv_detail_sistem"
                    style="@style/TextSpec.Value"
                    tools:text="@string/content_sistem" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/daya" />

                <TextView
                    android:id="@+id/tv_detail_daya"
                    style="@style/TextSpec.Value"
                    tools:text="@string/content_daya" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/torsi" />

                <TextView
                    android:id="@+id/tv_detail_torsi"
                    style="@style/TextSpec.Value"
                    tools:text="@string/content_torsi" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</ScrollView>